k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storemaker
  namespace: default
  labels:
    app: storemaker
spec:
  type: ClusterIP
  selector:
    app: storemaker
  ports:
    - name: http
      port: 80
      targetPort: 3080
      protocol: TCP
