k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storemaker
  namespace: default
  labels:
    app: storemaker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - storemaker.institutoitinerante.com.br
      secretName: storemaker-tls
  rules:
    - host: storemaker.institutoitinerante.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storemaker
                port:
                  number: 80
